--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
-    "unsloth_zoo>=2025.10.10",
+    "unsloth_zoo>=2025.10.11",
     "wheel>=0.42.0",
     "packaging",
     "torch>=2.4.0",
@@ -61,7 +61,7 @@ exclude = ["images*", "tests*", "kernels/moe*"]
 
 [project.optional-dependencies]
 huggingface = [
-    "unsloth_zoo>=2025.10.10",
+    "unsloth_zoo>=2025.10.11",
     "wheel>=0.42.0",
     "packaging",
     "torchvision",
@@ -172,6 +172,14 @@ cu126onlytorch280 = [
 ]
 cu128onlytorch280 = [
     "xformers==0.0.32.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
+]
+cu130onlytorch280 = [
+]
+cu126onlytorch290 = [
+]
+cu128onlytorch290 = [
+]
+cu130onlytorch290 = [
 ]
 cu118 = [
     "unsloth[huggingface]",
@@ -328,6 +336,26 @@ cu128-torch280 = [
     "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu128onlytorch280]",
 ]
+cu130-torch280 = [
+    "unsloth[huggingface]",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
+    "unsloth[cu130onlytorch280]",
+]
+cu126-torch290 = [
+    "unsloth[huggingface]",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
+    "unsloth[cu126onlytorch290]",
+]
+cu128-torch290 = [
+    "unsloth[huggingface]",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
+    "unsloth[cu128onlytorch290]",
+]
+cu130-torch290 = [
+    "unsloth[huggingface]",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
+    "unsloth[cu130onlytorch290]",
+]
 kaggle = [
     "unsloth[huggingface]",
 ]
@@ -366,7 +394,7 @@ colab-ampere-torch220 = [
     "unsloth[flashattention]",
 ]
 colab-new = [
-    "unsloth_zoo>=2025.10.10",
+    "unsloth_zoo>=2025.10.11",
     "packaging",
     "tyro",
     "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,<=4.56.2",
@@ -570,6 +598,26 @@ cu128-ampere-torch280 = [
     "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
     "unsloth[cu128onlytorch280]",
     "unsloth[flashattention]",
+]
+cu130-ampere-torch280 = [
+    "unsloth[huggingface]",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
+    "unsloth[cu130onlytorch280]",
+]
+cu126-ampere-torch280 = [
+    "unsloth[huggingface]",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
+    "unsloth[cu126onlytorch290]",
+]
+cu128-ampere-torch280 = [
+    "unsloth[huggingface]",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
+    "unsloth[cu128onlytorch290]",
+]
+cu130-ampere-torch280 = [
+    "unsloth[huggingface]",
+    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
+    "unsloth[cu130onlytorch290]",
 ]
 
 [project.urls]
