--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,8 +59,6 @@ huggingface-no-triton = [
     "hf_transfer",
 ]
 
-huggingface = [
-    "unsloth_zoo>=2025.8.3",
 huggingfacenotorch = [
     "wheel>=0.42.0",
     "packaging",
@@ -85,12 +83,11 @@ huggingface = [
     "torchvision",
     "unsloth[triton]",
 ]
-windows=[
+windows-no-triton=[
     "unsloth[huggingface-no-triton]",
     "bitsandbytes>=0.45.5 ; platform_system == 'Windows'",
     "xformers>=0.0.22.post7 ; platform_system == 'Windows'",
 ]
-windows-with-triton=[
 windows = [
     "unsloth[huggingface]",
     "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0 ; (sys_platform == 'win32')",
@@ -793,6 +790,7 @@ flashattentiontorch240abiTRUEcu12x = [
 intelgputorch260 = [
     "unsloth_zoo[intelgpu]",
     "unsloth[huggingfacenotorch]",
+    "unsloth[windows-no-triton]",
 
     "pytorch_triton_xpu @ https://download.pytorch.org/whl/pytorch_triton_xpu-3.2.0-cp39-cp39-linux_x86_64.whl#sha256=147607f190a7d7aa24ba454def5977fbbfec792fdae18e4ed278cfec29b69271 ; ('linux' in sys_platform) and python_version == '3.9' and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
     "pytorch_triton_xpu @ https://download.pytorch.org/whl/pytorch_triton_xpu-3.2.0-cp310-cp310-linux_x86_64.whl#sha256=23aa423fa1542afc34f67eb3ba8ef20060f6d1b3a4697eaeab22b11c92b30f2b ; ('linux' in sys_platform) and python_version == '3.10' and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
