Revert ruff on some files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -868,6 +868,11 @@ repository = "https://github.com/unslothai/unsloth"
 
 [tool.ruff]
 target-version = "py311"
+extend-exclude = [
+    "*chat_templates.py",
+    "*ollama_template_mappers.py",
+    "*_auto_install.py",
+]
 
 [tool.ruff.lint]
 select = ["E9", "F63", "F7", "F82"]
