--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,11 @@ windows = [
     "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0 ; (sys_platform == 'win32')",
     "xformers>=0.0.22.post7 ; (sys_platform == 'win32')",
 ]
+mac = [
+    "unsloth[huggingface]",
+    "mlx>=0.12.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
+    "mlx-lm>=0.9.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
+]
 base = [
     "unsloth[huggingface]",
 ]
