Add comprehensive metrics collection system
- Add metrics module with inference and training stats tracking
- Implement Prometheus-compatible metrics export
- Integrate metrics collection into inference (generate) methods
- Integrate metrics collection into training loop
- Add optional HTTP server for metrics endpoint (/metrics)
- Support similar metrics to vLLM (latencies, token counts, throughput)

Features:
- Inference metrics: request latencies, token counts, tokens/sec, time-to-first-token
- Training metrics: loss, learning rate, samples/sec, gradient norms
- Prometheus export: Counter, Gauge, Histogram metrics
- HTTP endpoint: /metrics endpoint for Prometheus scraping
- Automatic collection: Metrics collected during inference and training

Usage:
- Enable with: enable_prometheus_metrics()
- Start server: start_metrics_server(port=9090)
- Access metrics: http://localhost:9090/metrics

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ triton = [
     "triton>=3.0.0 ; ('linux' in sys_platform)",
     "triton-windows ; (sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
+metrics = [
+    "prometheus_client>=0.20.0",
+]
 
 huggingfacenotorch = [
     "wheel>=0.42.0",
